# algorithms

./: .gitignore  .gitmodules  README.md  file.txt  foo.txt
041/a5c/: SHA256E-s4--7d865e959b2466918c9863afca942d0fb89d7c9ac0c99bafc3749504ded97730.txt.log.cnk
15c/dd2/: SHA256E-s69708772--c6b5c44e66b03be8c071f149de97032036b6c044fe7113851f9e11db3cf1b6dd.mp4.log.cnk
282/b2d/: SHA256E-s419440352--e459457f658f65cef1e1ae3b4fb54a12afe0a90c519df644fe0e5c83bd10211f.dat.log.cnk
adaptive_filtering/: README.md
arduino-pbcdesign-udemy/: PCB_Project1.PrjPCB  README.md  Sheet1.SchDoc
arduino-pbcdesign-udemy/Arduino Uno Exemplo/: Gerber Files.Cam  Main.SchDoc  NC Drill File.Cam  PCB.PcbDoc  Sheet2.SchDoc
arduino_pbcdesign_udemy/Arduino Uno Exemplo/: Arduino Uno.PrjPCB  Arduino Uno.PrjPCBStructure  Sheet1.SchDoc
arduino_pbcdesign_udemy/__Previews/: Sheet1.SchDocPreview
artificial_intelligence/: README.md
artificial_intelligence/book_matt_harrison/: pyproject.toml
artificial_intelligence/computational_intelligence/: README.md
artificial_intelligence/matt_harrison/: README.md  pyproject.toml
artificial_intelligence/tip7077_computational_intelligence/: README.md
artificial_intelligence/tip8311_pattern_recognition/: README.md  pyproject.toml
artificial_intelligence/tip8311_pattern_recognition/list1/: pyproject.toml
communication_systems/: README.md
communication_systems/gnss/: README.md
computational-intelligence/: Future Computers Will Be Radically Different.txt
digital-communications/computional-homework/: default_gossary_entries.tex  (+1 more)
digital-signal-processing/: README.md
digital_communications/: README.md
digital_signal_processing/: README.md
fpga/: README.md
gnss/: README.md
linear_algebra/: README.md
multilinear_algebra/: README.md
numerical-methods/: README.md
numerical_methods/: README.md
optimization-theory/: README.md
optimization_theory/: README.md
pattern-recognition/trabalho computacional 1/: pyproject.toml  tictoc.m  tictoc.mat  trab1.py
radio-link/: README.md
statistical-signal-processing/: README.md
system-identification/: README.md
system_identification/: README.md  pyproject.toml
system_identification/Project 1 - Extraction of Attributes from Speech Signals for Pattern Classification/: PSD_audio_segmentation.m
system_identification/Project 2 - Modeling and Prediction of Reservoir Flow Series/Arquivos professor/: myfac_unbaised_backward.m
system_identification/Project_3_Identification_of_ARX_Processes/Arquivos professor/: fac_normalizada_backward.m
system_identification/professor's matlab codes/: myfac1.m  myfac2.m
(+593 files in other folders)
