[tool.poetry]
name = "id_sist"
version = "0.1.0"
description = ""
authors = ["tapyu <rubem.engenharia@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipykernel = "6.6.0"
sklearn = "^0.0"
matplotlib = "^3.5.1"
numpy = "<=1.21.5"
jupyter = "^1.0.0"
scipy = "^1.8.0"
PyAudio = "^0.2.11"
statsmodels = "^0.13.2"
matlab = "^0.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
