[tool.poetry]
name = "reconhecimento_de_padrões"
version = "0.1.0"
description = ""
authors = ["tapyu <rubem.engenharia@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
seaborn = "^0.11.2"
ipykernel = "6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
