[tool.poetry]
name = "list1"
version = "0.1.0"
description = ""
authors = ["tapyu <rubem.engenharia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.6.0"
sklearn = "^0.0"
matplotlib = "^3.5.1"
numpy = "<=1.21.5"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
